add commit nike responsive

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
       <!-- ------------------------------------ -->
     <!-- formal shoes -->
-    <section class="mt-5">
+    <section class="my-5">
         <div class="container">
             <h1 class="text-uppercase">formal shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -187,6 +187,50 @@
                   </div>
                 </div>
               </div>
+        </div>
+    </section>
+
+    <section class="my-5">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-4">
+                   <div class="row">
+                        <!-- image-icon-1 -->
+                       <div class="col-12 image-icon shadow-lg mb-3 rounded-3 pt-2">
+                            <div class="d-flex align-items-center">
+                                <img class="image-icon" src="icons/image-1.png" alt="">
+                                <div>
+                                    <h5>Find the Perfect Fit</h5>
+                                    <p>Everybody is different, which is why we offer styles for every body.</p>
+                                </div>
+                            </div>
+                       </div>
+                        <!-- image-icon-2 -->
+                       <div class="col-12 image-icon shadow-lg mb-3 rounded-3 pt-2">
+                            <div class="d-flex align-items-center">
+                                <img class="image-icon" src="icons/image-2.png" alt="">                              
+                                <div>
+                                    <h5>Free Exchanges</h5>
+                                    <p>One of the many reasons you can shop with peace of mind.</p>
+                                </div>
+                            </div>
+                       </div>
+                        <!-- image-icon-3 -->
+                       <div class="col-12 image-icon shadow-lg mb-3 rounded-3 pt-2">
+                            <div class="d-flex align-items-center">
+                                <img src="icons/image-3.png" alt="">                               
+                                <div>
+                                    <h5>Contact Our Seller</h5>
+                                    <p>They are here to help you. That's quite literally what we pay them for.</p>
+                                </div>
+                            </div>
+                       </div>
+                   </div>
+                </div>
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="icons/xmlid.png" alt="">
+                </div>
+            </div>
         </div>
     </section>
 
