add card update

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h1 class="text-uppercase casual-h1 mb-5">casual shoes</h1>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <!-- casual-shoes-1 -->
-                    <div class="col">
+                    <div class="col shadow-sm rounded-3 p-3">
                         <div class="card h-100 border border-0">
                             <div class="casual-image">
                                 <img src="images/casual-shoes-1.png" class="card-img-top img-fluid" alt="images/casual-shoes">
@@ -87,42 +87,42 @@
                         </div>
                     </div>
                     <!-- casual-shoes-2 -->
-                    <div class="col">
-                    <div class="card h-100 border border-0">
-                        <div class="casual-image">
-                            <img src="images/casual-shoes-2.png" class="card-img-top img-fluid" alt="images/casual-shoes">
-                        </div>                    
-                        <div class="card-body shoes-text">
-                            <h5 class="card-title">Sneakers Skate Shoe </h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <div class="col shadow-sm rounded-3 p-3">
+                        <div class="card h-100 border border-0">
+                            <div class="casual-image">
+                                <img src="images/casual-shoes-2.png" class="card-img-top img-fluid" alt="images/casual-shoes">
+                            </div>                    
+                            <div class="card-body shoes-text">
+                                <h5 class="card-title">Sneakers Skate Shoe </h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            </div>
+                            <div class="card-footer price d-flex justify-content-between border border-0">
+                                <small class="fw-bold">$234</small>
+                                <button type="button" class="btn btn-primary button__white-space">
+                                    <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
+                                    <span class="text-uppercase">buy now</span>
+                                </button>
+                            </div>
                         </div>
-                        <div class="card-footer price d-flex justify-content-between border border-0">
-                            <small class="fw-bold">$234</small>
-                            <button type="button" class="btn btn-primary button__white-space">
-                                <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
-                                <span class="text-uppercase">buy now</span>
-                            </button>
-                        </div>
-                    </div>
                     </div>
                     <!-- casual-shoes-3 -->
-                    <div class="col">
-                    <div class="card h-100 border border-0">
-                        <div class="casual-image">
-                            <img src="images/casual-shoes-3.png" class="card-img-top img-fluid" alt="images/casual-shoes">
-                        </div>                    
-                        <div class="card-body shoes-text">
-                            <h5 class="card-title">Sneakers Basketball shoe</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <div class="col shadow-sm rounded-3 p-3">
+                        <div class="card h-100 border border-0">
+                            <div class="casual-image">
+                                <img src="images/casual-shoes-3.png" class="card-img-top img-fluid" alt="images/casual-shoes">
+                            </div>                    
+                            <div class="card-body shoes-text">
+                                <h5 class="card-title">Sneakers Basketball shoe</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            </div>
+                            <div class="card-footer price d-flex justify-content-between border border-0">
+                                <small class="fw-bold">$234</small>
+                                <button type="button" class="btn btn-primary button__white-space">
+                                    <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
+                                    <span class="text-uppercase">buy now</span>
+                                </button>
+                            </div>
                         </div>
-                        <div class="card-footer price d-flex justify-content-between border border-0">
-                            <small class="fw-bold">$234</small>
-                            <button type="button" class="btn btn-primary button__white-space">
-                                <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
-                                <span class="text-uppercase">buy now</span>
-                            </button>
-                        </div>
-                    </div>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                 <h1 class="text-uppercase formal-h1">formal shoes</h1>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <!-- formal-shoes-1 -->
-                    <div class="col">
+                    <div class="col shadow-sm rounded-3 p-4">
                         <div class="card h-100 border border-0">
                             <div>
                                 <img src="images/formal-shoes-1.png" class="card-img-top img-fluid" alt="images/casual-shoes">
@@ -153,42 +153,42 @@
                         </div>
                     </div>
                     <!-- formal-shoes-2 -->
-                    <div class="col">
-                    <div class="card h-100 border border-0">
-                        <div>
-                            <img src="images/formal-shoes-2.png" class="card-img-top img-fluid" alt="images/casual-shoes">
-                        </div>                    
-                        <div class="card-body shoes-text">
-                            <h5 class="card-title">Slip-On Formal Shoe</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <div class="col shadow-sm rounded-3 p-4">
+                        <div class="card h-100 border border-0">
+                            <div>
+                                <img src="images/formal-shoes-2.png" class="card-img-top img-fluid" alt="images/casual-shoes">
+                            </div>                    
+                            <div class="card-body shoes-text">
+                                <h5 class="card-title">Slip-On Formal Shoe</h5>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            </div>
+                            <div class="card-footer price d-flex justify-content-between border border-0">
+                                <small class="fw-bold">$234</small>
+                                <button type="button" class="btn btn-primary button__white-space">
+                                    <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
+                                    <span class="text-uppercase">buy now</span>
+                                </button>
+                            </div>
                         </div>
-                        <div class="card-footer price d-flex justify-content-between border border-0">
-                            <small class="fw-bold">$234</small>
-                            <button type="button" class="btn btn-primary button__white-space">
-                                <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
-                                <span class="text-uppercase">buy now</span>
-                            </button>
-                        </div>
-                    </div>
                     </div>
                     <!-- formal-shoes-3 -->
-                    <div class="col">
-                    <div class="card h-100 border border-0">
-                        <div>
-                            <img src="images/formal-shoes-3.png" class="card-img-top img-fluid" alt="images/casual-shoes">
-                        </div>                    
-                        <div class="card-body shoes-text">
-                            <h5 class="card-title">Slip-On Formal Shoe</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <div class="col shadow-sm rounded-3 p-4">
+                        <div class="card h-100 border border-0">
+                            <div>
+                                <img src="images/formal-shoes-3.png" class="card-img-top img-fluid" alt="images/casual-shoes">
+                            </div>                    
+                            <div class="card-body shoes-text">
+                                <h5 class="card-title">Slip-On Formal Shoe</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            </div>
+                            <div class="card-footer price d-flex justify-content-between border border-0">
+                                <small class="fw-bold">$234</small>
+                                <button type="button" class="btn btn-primary button__white-space">
+                                    <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
+                                    <span class="text-uppercase">buy now</span>
+                                </button>
+                            </div>
                         </div>
-                        <div class="card-footer price d-flex justify-content-between border border-0">
-                            <small class="fw-bold">$234</small>
-                            <button type="button" class="btn btn-primary button__white-space">
-                                <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
-                                <span class="text-uppercase">buy now</span>
-                            </button>
-                        </div>
-                    </div>
                     </div>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                     <div class="col-lg-5 icon-left mt-5">
                        <div class="row">
                             <!-- image-icon-1 -->
-                           <div class="col-12 image-icon shadow-lg mb-3 rounded-3 pt-2 mx-1">
+                           <div class="col-12 image-icon shadow mb-3 rounded-3 pt-2 mx-1">
                                 <div class="d-flex align-items-center image__icon--responsiv">
                                     <img src="icons/image-1.png" alt="">
                                     <div>
@@ -212,7 +212,7 @@
                                 </div>
                            </div>
                             <!-- image-icon-2 -->
-                           <div class="col-12 image-icon shadow-lg mb-3 rounded-3 pt-2 mx-1">
+                           <div class="col-12 image-icon shadow mb-3 rounded-3 pt-2 mx-1">
                                 <div class="d-flex align-items-center image__icon--responsiv">
                                     <img src="icons/image-2.png" alt="">                              
                                     <div>
@@ -222,7 +222,7 @@
                                 </div>
                            </div>
                             <!-- image-icon-3 -->
-                           <div class="col-12 image-icon shadow-lg mb-3 rounded-3 pt-2 mx-1">
+                           <div class="col-12 image-icon shadow mb-3 rounded-3 pt-2 mx-1">
                                 <div class="d-flex align-items-center image__icon--responsiv">
                                     <img src="icons/image-3.png" alt="">                               
                                     <div>
