add card update and othars file

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h1 class="text-uppercase casual-h1 mb-5">casual shoes</h1>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <!-- casual-shoes-1 -->
-                    <div class="col shadow-sm rounded-3 p-3">
+                    <div class="col shadow-sm rounded-3 p-3 my-card">
                         <div class="card h-100 border border-0">
                             <div class="casual-image">
                                 <img src="images/casual-shoes-1.png" class="card-img-top img-fluid" alt="images/casual-shoes">
@@ -77,7 +77,7 @@
                                 <h5 class="card-title">Nike Shoe</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             </div>
-                            <div class="card-footer price d-flex justify-content-between border border-0">
+                            <div class="card-footer price d-flex justify-content-between align-items-center border border-0">
                                 <small class="fw-bold">$234</small>
                                 <button type="button" class="btn btn-primary button__white-space">
                                     <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <!-- casual-shoes-2 -->
-                    <div class="col shadow-sm rounded-3 p-3">
+                    <div class="col shadow-sm rounded-3 p-3 my-card">
                         <div class="card h-100 border border-0">
                             <div class="casual-image">
                                 <img src="images/casual-shoes-2.png" class="card-img-top img-fluid" alt="images/casual-shoes">
@@ -96,7 +96,7 @@
                                 <h5 class="card-title">Sneakers Skate Shoe </h5>
                                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                             </div>
-                            <div class="card-footer price d-flex justify-content-between border border-0">
+                            <div class="card-footer price d-flex justify-content-between align-items-center border border-0">
                                 <small class="fw-bold">$234</small>
                                 <button type="button" class="btn btn-primary button__white-space">
                                     <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <!-- casual-shoes-3 -->
-                    <div class="col shadow-sm rounded-3 p-3">
+                    <div class="col shadow-sm rounded-3 p-3 my-card">
                         <div class="card h-100 border border-0">
                             <div class="casual-image">
                                 <img src="images/casual-shoes-3.png" class="card-img-top img-fluid" alt="images/casual-shoes">
@@ -115,7 +115,7 @@
                                 <h5 class="card-title">Sneakers Basketball shoe</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                             </div>
-                            <div class="card-footer price d-flex justify-content-between border border-0">
+                            <div class="card-footer price d-flex justify-content-between align-items-center border border-0">
                                 <small class="fw-bold">$234</small>
                                 <button type="button" class="btn btn-primary button__white-space">
                                     <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
@@ -131,10 +131,10 @@
         <!-- formal shoes -->
         <section class="my-5">
             <div class="container">
-                <h1 class="text-uppercase formal-h1">formal shoes</h1>
+                <h1 class="mb-5 text-uppercase formal-h1">formal shoes</h1>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <!-- formal-shoes-1 -->
-                    <div class="col shadow-sm rounded-3 p-4">
+                    <div class="col shadow-sm rounded-3 p-3 my-card">
                         <div class="card h-100 border border-0">
                             <div>
                                 <img src="images/formal-shoes-1.png" class="card-img-top img-fluid" alt="images/casual-shoes">
@@ -143,7 +143,7 @@
                                 <h5 class="card-title">Prestige High-Cut Leather </h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             </div>
-                            <div class="card-footer price d-flex justify-content-between border border-0">
+                            <div class="card-footer price d-flex justify-content-between align-items-center border border-0">
                                 <small class="fw-bold">$234</small>
                                 <button type="button" class="btn btn-primary button__white-space">
                                     <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <!-- formal-shoes-2 -->
-                    <div class="col shadow-sm rounded-3 p-4">
+                    <div class="col shadow-sm rounded-3 p-3 my-card">
                         <div class="card h-100 border border-0">
                             <div>
                                 <img src="images/formal-shoes-2.png" class="card-img-top img-fluid" alt="images/casual-shoes">
@@ -162,7 +162,7 @@
                                 <h5 class="card-title">Slip-On Formal Shoe</h5>
                                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                             </div>
-                            <div class="card-footer price d-flex justify-content-between border border-0">
+                            <div class="card-footer price d-flex justify-content-between align-items-center border border-0">
                                 <small class="fw-bold">$234</small>
                                 <button type="button" class="btn btn-primary button__white-space">
                                     <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                     <!-- formal-shoes-3 -->
-                    <div class="col shadow-sm rounded-3 p-4">
+                    <div class="col shadow-sm rounded-3 p-3 my-card">
                         <div class="card h-100 border border-0">
                             <div>
                                 <img src="images/formal-shoes-3.png" class="card-img-top img-fluid" alt="images/casual-shoes">
@@ -181,7 +181,7 @@
                                 <h5 class="card-title">Slip-On Formal Shoe</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                             </div>
-                            <div class="card-footer price d-flex justify-content-between border border-0">
+                            <div class="card-footer price d-flex justify-content-between align-items-center border border-0">
                                 <small class="fw-bold">$234</small>
                                 <button type="button" class="btn btn-primary button__white-space">
                                     <img class="button__shopping--cart" src="icons/shopping-cart.png" alt="">
